[gd_scene load_steps=11 format=3 uid="uid://b2utiw3nl1pqr"]

[ext_resource type="FontFile" uid="uid://cjg2va2gx341j" path="res://assets/fonts/nippo/OTF/Nippo-Regular.otf" id="1_22btv"]
[ext_resource type="Script" path="res://ui/hud/subscenes/status_panel.gd" id="1_28hqb"]
[ext_resource type="PackedScene" uid="uid://c7pdclqtpglet" path="res://ui/inventory/subscenes/progress_bar.tscn" id="2_b8j1u"]
[ext_resource type="Texture2D" uid="uid://cok6af1uuonbi" path="res://ui/hud/assets/under_progressbar.svg" id="3_g1bt0"]
[ext_resource type="Texture2D" uid="uid://dn0jfcq1ly2go" path="res://ui/hud/assets/coin.svg" id="3_pneu6"]
[ext_resource type="Texture2D" uid="uid://co1tygwevb7v" path="res://ui/hud/assets/blood.svg" id="4_cowbk"]
[ext_resource type="Texture2D" uid="uid://c5wvjsj1orm8c" path="res://ui/hud/assets/health_progressbar.svg" id="4_kocoe"]
[ext_resource type="Texture2D" uid="uid://bojvc66432jr2" path="res://ui/hud/assets/flask.svg" id="5_lp0dp"]
[ext_resource type="Texture2D" uid="uid://bq6j3q2bphy6y" path="res://ui/hud/assets/syringe.svg" id="6_lp7yt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i74p8"]
bg_color = Color(0.0823529, 0.0823529, 0.0823529, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="StatusPanel" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -1080.0
offset_right = 1920.0
grow_vertical = 0
script = ExtResource("1_28hqb")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 465.0
offset_bottom = 119.0
theme_override_styles/panel = SubResource("StyleBoxFlat_i74p8")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="RowsVBox" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HealthBar" parent="PanelContainer/MarginContainer/RowsVBox" instance=ExtResource("2_b8j1u")]
unique_name_in_owner = true
layout_mode = 2
texture_under = ExtResource("3_g1bt0")
texture_progress = ExtResource("4_kocoe")
nine_patch_margins = Vector4(0, 0, 425, 7)
margin_bottom = 20
font_size = 24

[node name="ThirdRowMarginBox" type="MarginContainer" parent="PanelContainer/MarginContainer/RowsVBox"]
layout_mode = 2

[node name="ThirdRowHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/RowsVBox/ThirdRowMarginBox"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="CoinTexture" type="NinePatchRect" parent="PanelContainer/MarginContainer/RowsVBox/ThirdRowMarginBox/ThirdRowHBox"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_pneu6")

[node name="BalanceMarginBox" type="MarginContainer" parent="PanelContainer/MarginContainer/RowsVBox/ThirdRowMarginBox/ThirdRowHBox"]
layout_mode = 2
theme_override_constants/margin_left = 15

[node name="BalanceLabel" type="Label" parent="PanelContainer/MarginContainer/RowsVBox/ThirdRowMarginBox/ThirdRowHBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_22btv")
theme_override_font_sizes/font_size = 24
text = "132 Euronen"

[node name="ThirdRowHBoxStatusEffects" type="HBoxContainer" parent="PanelContainer/MarginContainer/RowsVBox/ThirdRowMarginBox/ThirdRowHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
alignment = 2

[node name="BleedTexture" type="NinePatchRect" parent="PanelContainer/MarginContainer/RowsVBox/ThirdRowMarginBox/ThirdRowHBox/ThirdRowHBoxStatusEffects"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("4_cowbk")

[node name="BleedMargin" type="MarginContainer" parent="PanelContainer/MarginContainer/RowsVBox/ThirdRowMarginBox/ThirdRowHBox/ThirdRowHBoxStatusEffects"]
layout_mode = 2
theme_override_constants/margin_left = 15

[node name="PoisonTexture" type="NinePatchRect" parent="PanelContainer/MarginContainer/RowsVBox/ThirdRowMarginBox/ThirdRowHBox/ThirdRowHBoxStatusEffects"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("5_lp0dp")

[node name="PoisonMargin" type="MarginContainer" parent="PanelContainer/MarginContainer/RowsVBox/ThirdRowMarginBox/ThirdRowHBox/ThirdRowHBoxStatusEffects"]
layout_mode = 2
theme_override_constants/margin_left = 15

[node name="DrugTexture" type="NinePatchRect" parent="PanelContainer/MarginContainer/RowsVBox/ThirdRowMarginBox/ThirdRowHBox/ThirdRowHBoxStatusEffects"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("6_lp7yt")
